# VERAPAK

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  __main__.py  algorithm.py  cmdline.py  config.py  docker.bashrc  example.conf  holds.conf  main.py  region.py  run.sh  snap.py  todo.md  unittests.py
.github/workflows/: docker-image.yml  docker-publish.yml
abstraction/: ae.py  center_point.py  fallback.py  fgsm.py  fgsm_engine.py  modfgsm.py  random_point.py  rplusfgsm.py
buildtest/: results.csv
dimension_ranking/: by_index.py  dim_select_base.py  gradient_based.py  gradient_dim_select.py
examples/: old_example.conf  test_a.conf  test_a.txt  test_b.conf  test_b.txt  test_c.conf  test_c.txt  test_d.txt  timeout.conf
model_tools/: model_base.py  onnx_model.py  onnx_utils.py
test_logs/: test_a.txt  test_b.txt  test_c.txt  test_d.txt
utilities/: point_tools.py
verapak/: check.py  cmdline.py  constraints.py  graphwrangler.py  parse_arg_tools.py  parse_arg_types.py  snap.py  strategy_registry.py
verapak/abstraction/: __init__.py  ae.py  center_point.py  fallback.py  fgsm.py  fgsm_engine.py  modfgsm.py  random_point.py  rfgsm.py  rplusfgsm.py
verification/: discrete_search.py  ve.py
vnn_comp_2021_counterexamples/: Convnet_avgpool.onnx-prop_10_0.02.vnnlib.npy  Convnet_avgpool.onnx-prop_10_0.04.vnnlib.npy  Convnet_avgpool.onnx-prop_16_0.04.vnnlib.npy  Convnet_avgpool.onnx-prop_4_0.04.vnnlib.npy  Convnet_avgpool.onnx-prop_8_0.04.vnnlib.npy  Convnet_maxpool.onnx-prop_14_0.004.vnnlib.npy  cifar_wide_kw.onnx-cifar_wide_kw-img4386-eps0.00026143790849673205.vnnlib.npy
vnncompscripts/: install_tool.sh  prepare_instance.sh  run_instance.sh
vnncomptests/: makeconf.py
(+52 files in other folders)
